--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "crud",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start":"node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongodb": "^6.13.0",
-    "mongoose": "^8.10.0",
-    "nodemon": "^3.1.9",
-    "path": "^0.12.7"
-  }
+	"name": "apiWithClient",
+	"version": "1.0.0",
+	"engines": {
+		"node": "18.19.1"
+	},
+	"scripts": {
+		"install-reactjs": "npm install --prefix reactjs",
+		"install-api": "npm install --prefix api",
+		"build-reactjs": "npm run build --prefix reactjs",
+		"heroku-postbuild": "concurrently \"npm:install-*\"; concurrently \"npm:build-*\"; ",
+		"start": "npm start --prefix api",
+		"dev:react": "concurrently --raw\npm run api\" \"npm run react\"",
+		"react": "cd reactjs && npm run start",
+		"api": "cd api; nodemon server.js"
+	},
+	"dependencies": {
+		"concurrently": "^9.1.2"
+	}
 }
