--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "sass": "^1.84.0",
+    "sass-loader": "^16.0.4",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6"
   }
 }
